--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <section class="section-results">
         <div class="input-client">
-            <input type="text" id="input"><br>
+            <input type="text" id="input" placeholder="Search Movie"><br>
             <button id="search-movie"><img src="Vector.png" alt=""></button>
         </div>
                 <!-- Slider main container -->
@@ -124,12 +124,9 @@
             <p>@2023 - All rights reserved</p>
         </div>
     </section>
-
-    <!-- API KEY: 27c5ad2effc94eba21b728a527e37db3 -->
-    <!-- API Read Access Token: eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIyN2M1YWQyZWZmYzk0ZWJhMjFiNzI4YTUyN2UzN2RiMyIsInN1YiI6IjY2NmZmYTZmNDNmY2NkYzVlNGQxZDU0OCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.txw2oV5Ej-CCVrvv03EX0wC0dhgrdXqPZvNtV1dexd4 -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     
-    <script src="appjs">
+    <script type="module" src="app.js">
         //     const swiperResults = new Swiper('.swiper-results', {
         //     navigation: {
         //         nextEl: '.swiper-button-next-results',
