--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
             <div class="swiper-scrollbar-results"></div>
         </div>
     </section>
-
+    <section class="modalhidden">
+        <!-- The Modal -->
+        <div id="myModal2" class="modal2">
+            <!-- Modal content -->
+            <div class="modal-content2">
+                <span class="close">&times;</span>
+                <div class="grid-modal">
+                    <div class="imgfilm">HIHI</div>
+                    <div class="contentfilm">HIHI</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="section-latest">
         <div class="div-latest">
             <p>Latest releases</p>
