--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="modal-content2">
                 <span class="close">&times;</span>
                 <div class="grid-modal">
-                    <div class="imgfilm">HIHI</div>
-                    <div class="contentfilm">HIHI</div>
+                    <div class="imgfilm"></div>
+                    <div class="contentfilm"></div>
                 </div>
             </div>
         </div>
