--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
             <div id="myModal" class="modal">
                 <div class="modal-content">
                     <div>
-                        <label for="username">Username</label>
-                        <input type="text" name="username" id="username" placeholder="username"/><br>
-                        <p id="msgus">only lowercase and at least 5 characters, max 10.</p>
-                        <br><br>
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email" placeholder="your email"/><br>
-                        <p id="msgem">please enter a valid email!</p>
-                    </div>
-                    <div>
-                        <input type="text">
-                        <button type="submit">Send</button>
                         <span class="close">&times;</span>
+                        <button class="singinbtn">SINGIN</button><button>LOGIN</button><BR></BR>
+                    </div>
+                    <div>
+                        <input type="text" name="username" id="username" placeholder="Username"/><br>
+                        <p id="msgus">only lowercase and at least 5 characters, max 10.</p>
+                        <label for="password"></label>
+                        <input type="password" name="email" id="email" placeholder="Password"/><br>
+                        <p id="msgem">your password is not correct!</p>
+                        <input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkboxValue">
+                        <label for="myCheckbox">Remenber Me</label><BR></BR>
+                    </div>
+                    <div>
+                        <button class="login">LOGIN</button><br><br>
+                        <a href="">I forgot my password</a><br>
+                        <a href="">Not a member yer ? <span>Sign up</span></a>
                     </div>
                 </div>
             </div>
