--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
             <button id="search-movie"><img src="Vector.png" alt=""></button>
         </div>
                 <!-- Slider main container -->
-        <div class="swiper-results">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide output"></div>
-            </div>        
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev swiper-button-prev-results"><img src="Left.png" alt=""></div>
-            <div class="swiper-button-next swiper-button-next-results"><img src="Right.png" alt=""></div>
-        
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar-results"></div>
+        <div class="div-results">
+            <div class="swiper-results">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide output"></div>
+                </div>        
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev swiper-button-prev-results"><img src="Left.png" alt=""></div>
+                <div class="swiper-button-next swiper-button-next-results"><img src="Right.png" alt=""></div>
+            
+                <!-- If we need scrollbar -->
+                <div class="swiper-scrollbar-results"></div>
+            </div>
         </div>
     </section>
     <section class="modalhidden">
