delete display none modal2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="modal-content">
                     <div>
                         <span class="close">&times;</span>
-                        <button class="singin-btn">SINGIN</button><button class="login">LOGIN</button><BR></BR>
+                        <button class="singin-btn">SINGIN</button><button class="login-btn">LOGIN</button><BR></BR>
                     </div>
                     <div class="login">
                         <input type="text" name="username" id="username" placeholder="Username"/><br>
@@ -33,7 +33,7 @@
                         <p id="msgem">your password is not correct!</p>
                         <input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkboxValue">
                         <label for="myCheckbox">Remenber Me</label><BR></BR>
-                        <button class="login">LOGIN</button><br><br>
+                        <button class="login-btn">LOGIN</button><br><br>
                         <a href="">I forgot my password</a><br>
                         <a href="">Not a member yet ? <span>Sign up</span></a>
                     </div>
