--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="modal-content">
                     <div>
                         <span class="close">&times;</span>
-                        <button class="singin-btn">SINGIN</button><button class="login-btn">LOGIN</button><BR></BR>
+                        <button class="signin-btn">SIGNIN</button><button class="login-btn first-login">LOGIN</button><BR></BR>
                     </div>
                     <div class="login">
                         <input type="text" name="username" id="username" placeholder="Username"/><br>
@@ -37,16 +37,17 @@
                         <a href="">I forgot my password</a><br>
                         <a href="">Not a member yet ? <span>Sign up</span></a>
                     </div>
-                    <div class="singin hidden">
+                    <div class="signin hidden">
                         <p>WELCOME!</p>
                         <input type="text" name="username" id="username" placeholder="Username"/><br>
                         <p id="msgus">only lowercase and at least 5 characters, max 10.</p>
                         <label for="email"></label>
                         <input type="email" name="email" id="email" placeholder="email"/><br>
                         <p id="msg-email">Please enter a valid email</p>
-                        <input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkboxValue">
-                        <label for="myCheckbox">Remenber Me</label><BR></BR>
-                        <button class="singin-btn">SINGIN</button><br><br>
+                        <input type="password" id="password" name="password" placeholder="Password"><br>
+                        <input type="confirm-password" id="confirm-password" name="confirm-password" placeholder="Confirm password">
+                        <label for="myCheckbox">Remember Me</label><BR></BR>
+                        <button class="signin-btn">SIGN-IN</button><br><br>
                     </div>
                 </div>
             </div>
