modal email almost finish

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </ul>
             <div id="myModal" class="modal">
                 <div class="modal-content">
-                    <div>
+                    <div class="header-login">
                         <span class="close">&times;</span>
-                        <button class="signin-btn">SIGNIN</button><button class="login-btn first-login">LOGIN</button><BR></BR>
+                        <button class="signin-btn">SIGN-UP</button><button class="login-btn first-login">LOGIN</button><BR></BR>
                     </div>
                     <div class="login">
                         <input type="text" name="username" id="username" placeholder="Username"/><br>
@@ -32,10 +32,10 @@
                         <input type="password" name="password" id="password" placeholder="Password"/><br>
                         <p id="msgem">your password is not correct!</p>
                         <input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkboxValue">
-                        <label for="myCheckbox">Remenber Me</label><BR></BR>
-                        <button class="login-btn">LOGIN</button><br><br>
-                        <a href="">I forgot my password</a><br>
-                        <a href="">Not a member yet ? <span>Sign up</span></a>
+                        <a href=""><label for="myCheckbox"><span style="text-transform: uppercase;">R</span>emember Me</label></a><BR></BR>
+                        <button class="login-btn second-login">LOGIN</button><br><br>
+                        <a href=""><span style="text-transform: uppercase;">I</span> forgot my password</a><br>
+                        <a href=""><span style="text-transform: uppercase;">N</span>ot a member yet ? <span class="UP" style="text-transform: uppercase;">Sign up</span></a>
                     </div>
                     <div class="signin hidden">
                         <p>WELCOME!</p>
@@ -46,8 +46,8 @@
                         <p id="msg-email">Please enter a valid email</p>
                         <input type="password" id="password" name="password" placeholder="Password"><br>
                         <input type="confirm-password" id="confirm-password" name="confirm-password" placeholder="Confirm password">
-                        <label for="myCheckbox">Remember Me</label><BR></BR>
-                        <button class="signin-btn">SIGN-IN</button><br><br>
+                        <a href=""><label for="myCheckbox">Remember Me</label></a><BR></BR>
+                        <button class="signin-btn second-signin">SIGN-UP</button><br><br>
                     </div>
                 </div>
             </div>
