--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div class="modal-content">
                     <div class="header-login">
                         <span class="close">&times;</span>
-                        <button class="signin-btn">SIGN-UP</button><button class="login-btn first-login">LOGIN</button><BR></BR>
+                        <button class="signin-btn ">SIGN-UP</button><button class="login-btn first-login">LOGIN</button><BR></BR>
                     </div>
                     <div class="login">
-                        <input type="text" name="username" id="username" placeholder="Username"/><br>
+                        <input type="text" name="username" id="username1" placeholder="Username" class="username"/><br>
                         <p id="msgus">only lowercase and at least 5 characters, max 10.</p>
                         <label for="password"></label>
-                        <input type="password" name="password" id="password" placeholder="Password"/><br>
+                        <input type="password" name="password" id="password1" placeholder="Password" class="password"/><br>
                         <p id="msgem">your password is not correct!</p>
                         <input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkboxValue">
                         <a href=""><label for="myCheckbox"><span style="text-transform: uppercase;">R</span>emember Me</label></a><BR></BR>
@@ -39,15 +39,14 @@
                     </div>
                     <div class="signin hidden">
                         <p>WELCOME!</p>
-                        <input type="text" name="username" id="username" placeholder="Username"/><br>
+                        <input type="text" name="username" id="username2" placeholder="Username" class="username"/><br>
                         <p id="msgus">only lowercase and at least 5 characters, max 10.</p>
                         <label for="email"></label>
                         <input type="email" name="email" id="email" placeholder="email"/><br>
                         <p id="msg-email">Please enter a valid email</p>
-                        <input type="password" id="password" name="password" placeholder="Password"><br>
+                        <input type="password" id="password2" name="password" placeholder="Password" class="password"><br>
                         <input type="confirm-password" id="confirm-password" name="confirm-password" placeholder="Confirm password">
-                        <a href=""><label for="myCheckbox">Remember Me</label></a><BR></BR>
-                        <button class="signin-btn second-signin">SIGN-UP</button><br><br>
+                        <button class="signin-btn second-signin ">SIGN-UP</button><br><br>
                     </div>
                 </div>
             </div>
