responsive and final modal film

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     <section class="section-header">
         <div class="div-header">
             <a href="" class="logo"><span>Be</span>Movies</a>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Latest</a></li>
-                <li><a href="#">Genres</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#" id="openModalBtn">Signin</a></li>
-            </ul>
+            <img src="hambur-menu(1)(1).png" alt="" class="hambur-menu">
+            <button class="closebtn" id="closebtn">x</button>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Latest</a></li>
+                    <li><a href="#">Genres</a></li>
+                    <li><a href="#">Register</a></li>
+                    <li><a href="#" id="openModalBtn">Signin</a></li>
+                </ul>
+            </div>
             <div id="myModal" class="modal">
                 <div class="modal-content">
                     <div class="header-login">
